--- a/platform_build/linux_ant/build.xml
+++ b/platform_build/linux_ant/build.xml
@@ -4,8 +4,9 @@
 	<property name="native" location="../../src/native"/>
 	<property name="libname32" value="liblwjgl.so"/>
 	<property name="libname64" value="liblwjgl64.so"/>
-	<property name="libs32" value="-L/usr/X11R6/lib -L/usr/X11/lib -lm -lX11 -lXext -lXcursor -lXrandr -lXxf86vm -lpthread -L${java.home}/lib/i386 -ljawt" />
-	<property name="libs64" value="-L/usr/X11R6/lib64 -L/usr/X11/lib64 -lm -lX11 -lXext -lXcursor -lXrandr -lXxf86vm -lpthread -L${java.home}/lib/amd64 -ljawt" />
+	<!-- After JDK 8 (at least on JDK 11), the architecture isn't part of the lib folder anymore -->
+	<property name="libs32" value="-L/usr/X11R6/lib -L/usr/X11/lib -lm -lX11 -lXext -lXcursor -lXrandr -lXxf86vm -lpthread -L${java.home}/lib -ljawt" />
+	<property name="libs64" value="-L/usr/X11R6/lib64 -L/usr/X11/lib64 -lm -lX11 -lXext -lXcursor -lXrandr -lXxf86vm -lpthread -L${java.home}/lib -ljawt" />
 	<property name="cflags32" value="-O2 -Wall -c -fPIC -std=c99 -Wunused"/>
 
 	<target name="clean">
@@ -74,7 +75,7 @@
 			<arg value="-I${native}/linux"/>
 		    <arg value="-I${native}/linux/opengl"/>
 			<mapper type="glob" from="*.c" to="*.o"/>
-		    <fileset dir="${native}/common" includes="*.c"/>
+			<fileset dir="${native}/common" includes="**/*.c" excludes="opengles/**/*"/>
 		    <fileset dir="${native}/common/opengl" includes="*.c"/>
 		    <fileset dir="${native}/generated/openal" includes="*.c"/>
 		    <fileset dir="${native}/generated/opencl" includes="*.c"/>
@@ -103,10 +104,11 @@
 			<arg value="-I${java.home}/../include/solaris"/>
 			<arg value="-I${native}/common"/>
 		    <arg value="-I${native}/common/opengl"/>
+			<arg value="-I${native}"/>
 			<arg value="-I${native}/linux"/>
 		    <arg value="-I${native}/linux/opengl"/>
 			<mapper type="glob" from="*.c" to="*.o"/>
-		    <fileset dir="${native}/common" includes="*.c"/>
+		    <fileset dir="${native}/common" includes="**/*.c" excludes="opengles/**/*"/>
 		    <fileset dir="${native}/common/opengl" includes="*.c"/>
 		    <fileset dir="${native}/generated/openal" includes="*.c"/>
 		    <fileset dir="${native}/generated/opencl" includes="*.c"/>    		
