--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 /src/native/*/org_lwjgl_*.h
 /src/native/*/*/org_lwjgl_*.h
 /src/native/linux/org_lwjgl_opengl_Display.c
+/src/native/*.h
 
 nbproject/project.xml
 /nbproject/private/
