--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -20,6 +20,10 @@ jobs:
       with:
         java-version: 11
     - name: Install required libs
-      run: sudo apt install libjinput-java libxcursor-dev libxrandr-dev libxt-dev libxxf86vm-dev
+      run: sudo apt install libjinput-java libxcursor-dev libxrandr-dev libxxf86vm-dev
     - name: Build with Ant
-      run: ant -noinput -buildfile build.xml
+      run: ant -noinput -buildfile build.xml all
+    - uses: actions/upload-artifact@v1
+      with:
+        name: lwjgl.jar
+        path: libs/lwjgl.jar
