--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -24,5 +24,5 @@ jobs:
       run: ant -noinput -buildfile build.xml -Ddo.delete=yes generate-all compile compile_native jars release
     - uses: actions/upload-artifact@v1
       with:
-        name: lwjgl.jar
-        path: libs/lwjgl.jar
+        name: lwjgl-2.9.4.zip
+        path: dist/lwjgl-2.9.4.zip
