--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -26,3 +26,10 @@ jobs:
       with:
         name: lwjgl-2.9.4.zip
         path: dist/lwjgl-2.9.4.zip
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: dist/lwjgl-2.9.4.zip
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
