--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -6,8 +6,11 @@ name: Java CI
 on:
   push:
     branches: [ master ]
+    tags:
+     - "*"
   pull_request:
     branches: [ master ]
+   
 
 jobs:
   build:
@@ -31,5 +34,7 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/')
       with:
         files: dist/lwjgl-2.9.4.zip
+        tag_name:  ${{ github.ref }}
+        name: Release ${{ github.ref }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
