ant.yml: do not compile natives, we are going to ship with prebuilt ones.

--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Install required libs
       run: sudo apt install libjinput-java libxcursor-dev libxrandr-dev libxxf86vm-dev
     - name: Build with Ant
-      run: ant -noinput -buildfile build.xml -Ddo.delete=yes generate-all compile compile_native jars release
+      run: ant -noinput -buildfile build.xml -Ddo.delete=yes generate-all compile jars release
     - uses: actions/upload-artifact@v1
       with:
         name: lwjgl-2.9.4.zip
